[gd_scene load_steps=3 format=3 uid="uid://65rdmab8yc43"]

[ext_resource type="Script" uid="uid://cdigs52avxjq2" path="res://scenes/launch_system.gd" id="1_5hrtf"]
[ext_resource type="Texture2D" uid="uid://btu7b3lb2h5ps" path="res://assets/black square.png" id="2_423q7"]

[node name="LaunchSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hrtf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_423q7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -241.0
offset_right = 241.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Nuclear Launch System"
fit_content = true
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Launch Missiles"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "00:00:00 "
fit_content = true
horizontal_alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Stop Launch"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -458.0
offset_right = 458.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Enter Password"
fit_content = true
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "format: 5 alphanumeric characters(e.g. X1Y2Z)"
max_length = 5

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Enter"

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Hint: Theme"
fit_content = true
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
